# BuildMyWorld

project1/: CMakeLists.txt
project1/model/building/: model.sdf
project1/robot/: model.sdf
project1/script/: p1hello.cpp
project1/world/: myworld
